# fasteda

./: Makefile  README.md  docker-compose.yml  pyproject.toml
examples/: databus.py  dependencies.py  depends_extra.py  di.py  di_param.py  dlq.py  dlq_v2.py  groups.py  jwt.py  lifespan.py  routers.py  simple.py
src/fasteda/: __init__.py  adapter.py  adder.py  app.py  app.py.orig  dependency.py  entity.py  interface.py  interfaces.py  router.py
src/fasteda/consumer/: __main__.py  commiter.py  config.py  consumer.py  interface.py
src/fasteda/middleware/: __init__.py  databus.py  dlq.py  jwt.py
